# Agent-Writing

./: .env.example  .gitignore  LICENSE  README.md  README_ENHANCEMENT.md  agentic_rag.py  code_sandbox copy.py  configuration.py  detailed_plasticity_query.py  esn_plasticity_query.py  langgraph.json  pyproject.toml  query_plasticity.py  report_masitro.py  requirements.txt
data/: machine_learning_algorithms.md  test.txt
examples/: arxiv.md  inference-market-gpt45.md  inference-market.md  inference.md  pubmed.md
ntbk/: report_maistro.ipynb
ntbk/reports/: agent_frameworks.md  langgraph_benefits.md  langgraph_marketplace.md  langgraph_platform_aws.md  replit_langgraph_langsmith.md
report_examples/business_strategy/: datadog_langsmith.md  developer_marketplaces.md  langgraph_marketplace.md
report_examples/reports/: agent_frameworks.md  observability_news.md  replit_langgraph_langsmith.md
report_examples/structures/: business_strategy.txt
report_structures/: comparative_analysis.txt  how_to.txt  trends.txt
src/open_deep_research/: __init__.py  agentic_rag.py  code_sandbox.py  configuration.py  graph.ipynb  graph.py  graph.py.bak  grcode.ipynb  grp.ipynb  prompts.py  state.py  utils.py
src/report_maistro/: configuration.py  graph.ipynb  graph.py  prompts.py  state.py  utils.py
